# translate-recurse

./: .code-translator.toml.example  .gitignore  README.md  pyproject.toml  requirements.txt  translate-recurse.py
src/code_translator/: __init__.py  cli.py  config.py  parser.py  processor.py  translator.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_parser.py  test_processor.py  test_translator.py
